--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 html {
   scroll-behavior: smooth;
 }
